2001-05-31  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: 4.0.99m-rc1

	* html/monopt.htm: Typo.
	* html/confopt.htm: Cruft removal.
	From: John Stone <johns@ks.uiuc.edu>

2001-05-30  Harlan Stenn  <stenn@whimsy.udel.edu>

	* README.cvs: More updates and cleanup.

	* ntpd/ntp_loopfilter.c (loop_config): 
	Check against STA_NANO instead of (NTP_API > 3) to catch kernels
	that were rolled while the spec was evolving.
	From: John.Hay@icomtek.csir.co.za

	* README.cvs: Note that we want to check out NTP into a clean
	subdir.
	Reported by jrd@cc.usu.edu (Joe Doupnik)

2001-05-27  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: 4.0.99k40

	* include/ntp_refclock.h: Median Filter (SAMPLE - macro) - change
	to use most recent MAXSTAGE entries when the filter overflows (ie
	driver poking say once per second with poll > MAXSTAGE) rather
	than blocking after MAXSTAGE entries (turf oldest rather than turf
	most recent).
	From: John Woolner <vk1et@tpg.com.au>

	* ntpd/refclock_true.c:
	   a. Don't cream pp->a_lastcode when we get a <cr><lf> pair 
	   b. Fix up pp->leap handling to work correctly 
	   c. clear CEVNT_BADTIME etc warnings when we get good clock 
	CEVNT_NOMINAL. 
	From: John Woolner <vk1et@tpg.com.au>

	* kernel/sys/pcl720.h:
	Add support for the XL clock to refclock_true.c 
	From: Paul A Vixie <vixie@mfnx.net> 

	* ntpd/ntp_loopfilter.c (local_clock): One more attempt at
	"improving" the panic message.

2001-05-26  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in (ac_cv_func_ctty_for_f_setown): BSDI3 needs a ctty
	for F_SETOWN, too.
	From: Paul A Vixie <vixie@mfnx.net>

2001-05-24  Harlan Stenn  <stenn@whimsy.udel.edu>

	* html/ntpd.htm: Typo.
	From: John Stone <johns@ks.uiuc.edu>

2001-05-23  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: 4.0.99k39

	* ntpd/ntp_loopfilter.c (local_clock): huffpuff cleanup/improvements.
	(huffpuff): Cleanup/improvements.
	(loop_config): huffpuff initialization cleanup/improvements.